# malviz

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  entry.py  kernel-metadata.json  pyproject.toml  requirements.txt
malviz/: class_names.json  cli.py  converter.py  inference.py  scanner.py
my_ppp_project/: working-ppp.ipynb
