[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "malviz"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.18",
    "numpy>=1.24",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
    "scikit-image>=0.21",
    "scipy>=1.11",
    "joblib>=1.3",
]

[project.scripts]
malviz = "malviz.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
malviz = [
    "*.onnx",
    "*.onnx.data",
    "*.joblib",
    "*.json",
]
